--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/styled-components": "^5.1.26",
     "grommet": "^2.27.0",
     "grommet-icons": "^4.8.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.4",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "prettier": {
+    "printWidth": 120
   }
 }
